--- a/templates/inc/navbar.html.twig
+++ b/templates/inc/navbar.html.twig
@@ -11,7 +11,7 @@
         <a href="/" class="nav-link">Home</a>
       </li>
       <li class="nav-item">
-        <a href="/article/new" class="nav-link">New User</a>
+        <a href="/user/new" class="nav-link">New User</a>
       </li>
     </ul>
   </div>
