--- a/templates/users/show.html.twig
+++ b/templates/users/show.html.twig
@@ -6,5 +6,5 @@
 {% else %}
 <p>Loooks like an error and you didnt passed any users</p>
 {% endif %}
-<a href="/" class="btn btn-primary">Back</a>
+<a href="/users/" class="btn btn-primary">Back</a>
 {% endblock %}
