--- a/templates/inc/navbar.html.twig
+++ b/templates/inc/navbar.html.twig
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-sm navbar-dark bg-primary mb-3">
 <div class="container">
-  <a href="/" class="navbar-brand">UMS</a>
+  <a href="/users/" class="navbar-brand">UMS</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#mobile-nav">
     <span class="navbar-toggle-icon"></span>
   </button>
@@ -11,7 +11,10 @@
         <a href="/" class="nav-link">Home</a>
       </li>
       <li class="nav-item">
-        <a href="/user/new" class="nav-link">New User</a>
+        <a href="/groups/group/new" class="nav-link">New Group</a>
+      </li>
+      <li class="nav-item">
+        <a href="/users/user/new" class="nav-link">New User</a>
       </li>
     </ul>
   </div>
