--- a/templates/users/index.html.twig
+++ b/templates/users/index.html.twig
@@ -15,9 +15,9 @@
           <tr>
             <td>{{ user.name }}</td>
             <td> 
-            <a href="/user/{{ user.id }}" class="btn btn-dark">Show</a>
-            <a href="/user/edit/{{ user.id }}" class="btn btn-dark">Edit</a>
-            <a href="/user/delete/{{user.id}}" class="btn btn-danger">Delete</a>
+            <a href="/users/user/{{ user.id }}" class="btn btn-dark">Show</a>
+            <a href="/users/user/edit/{{ user.id }}" class="btn btn-dark">Edit</a>
+            <a href="/users/user/delete/{{user.id}}" class="btn btn-danger">Delete</a>
             </td>
           </tr>
         {% endfor %}
