--- a/templates/groups/create.html.twig
+++ b/templates/groups/create.html.twig
@@ -4,8 +4,8 @@
 {{ form_start(form) }}
 
 {{ form_widget(form) }}
-<select class="form-control" name="group_id">
-  <option>Select group</option>
+<select class="form-control" name="user_id">
+  <option>Select user</option>
   {% for user in users %}
   <option value="{{ user.id }}">{{user.name}}</option>
   {% endfor %}
