--- a/templates/groups/edit.html.twig
+++ b/templates/groups/edit.html.twig
@@ -4,6 +4,11 @@
 {{ form_start(form) }}
 
 {{ form_widget(form) }}
-
+<select class="form-control" name="user_id">
+  <option>Select user</option>
+  {% for user in users %}
+  <option value="{{ user.id }}">{{user.name}}</option>
+  {% endfor %}
+   </select>
 {{ form_end(form) }}
 {% endblock %}
