--- a/templates/users/edit.html.twig
+++ b/templates/users/edit.html.twig
@@ -4,7 +4,7 @@
 {{ form_start(form) }}
 
 {{ form_widget(form) }}
-<select class="form-control" name="group_id">
+<select class="form-control" name="group_id[]">
   <option>Select group</option>
   {% for group in groups %}
   <option value="{{ group.id }}">{{group.title}}</option>
