--- a/templates/groups/create.html.twig
+++ b/templates/groups/create.html.twig
@@ -4,11 +4,15 @@
 {{ form_start(form) }}
 
 {{ form_widget(form) }}
-<select class="form-control" name="user_id">
-  <option>Select user</option>
+<div style="margin:5px 0">
+<label style="margin-top:5px">User List</label>
+<select class="form-control" name="users[user][]" multiple>
+  <option disabled selected>Select user</option>
   {% for user in users %}
   <option value="{{ user.id }}">{{user.name}}</option>
   {% endfor %}
    </select>
+   </div>
+   <button type="submit" class="btn btn-secondary">Create</button>
 {{ form_end(form) }}
 {% endblock %}
