--- a/templates/inc/navbar.html.twig
+++ b/templates/inc/navbar.html.twig
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-sm navbar-dark bg-primary mb-3">
+<nav class="navbar navbar-expand-sm navbar-dark bg-secondary mb-3" style="background-color: #6c757d;">
 <div class="container">
   <a href="/users/" class="navbar-brand">UMS</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#mobile-nav">
@@ -7,14 +7,30 @@
 
   <div class="collapse navbar-collapse" id="mobile-nav">
     <ul class="navbar-nav ml-auto">
-      <li class="nav-item">
+      <li class="nav-item ms-1">
         <a href="/" class="nav-link">Home</a>
       </li>
-      <li class="nav-item">
-        <a href="/groups/group/new" class="nav-link">New Group</a>
+      <li class="nav-item ms-1">
+      <div class="dropdown">
+          <a class="btn btn-secondary dropdown-toggle border-0" 
+          href="#" role="button"  data-bs-toggle="dropdown" aria-expanded="false">
+          Users</a>
+          <ul class="dropdown-menu" aria-labelledby="dropdownMenuLink">
+            <li><a class="dropdown-item" href="/users/user/new" class="nav-link">New User</a></li>
+            <li><a class="dropdown-item" href="/users/" class="nav-link">User List</a></li>
+          </ul>
+      </div>
       </li>
-      <li class="nav-item">
-        <a href="/users/user/new" class="nav-link">New User</a>
+      <li class="nav-item ms-1">
+      <div class="dropdown">
+          <a class="btn btn-secondary dropdown-toggle border-0" 
+          href="#" role="button"  data-bs-toggle="dropdown" aria-expanded="false">
+          Groups</a>
+          <ul class="dropdown-menu" aria-labelledby="dropdownMenuLink">
+            <li><a class="dropdown-item" href="/groups/group/new" class="nav-link">New Group</a></li>
+            <li><a class="dropdown-item" href="/groups/" class="nav-link">Group List</a></li>
+          </ul>
+      </div>
       </li>
     </ul>
   </div>
