password hash added + auth

--- a/templates/inc/navbar.html.twig
+++ b/templates/inc/navbar.html.twig
@@ -34,5 +34,8 @@
       </li>
     </ul>
   </div>
+  <div class="nav navbar-nav navbar-right">
+               <a href="{{ path('logout') }}" class="navbar-brand"><strong>Logout</strong></a>
+            </div>
 </div>
 </nav>
