--- a/templates/users/edit.html.twig
+++ b/templates/users/edit.html.twig
@@ -5,6 +5,8 @@
 {{ form_start(form) }}
 
 {{ form_widget(form) }}
+<label>Password</label>
+<input class="form-control" name="password">
 <label>Available Group List</label>
 <select class="form-control" name="groups[group][]">
   <option disabled selected >Select from the list...</option>
