--- a/templates/users/index.html.twig
+++ b/templates/users/index.html.twig
@@ -16,8 +16,10 @@
             <td>{{ user.name }}</td>
             <td> 
             <a href="/users/user/{{ user.id }}" class="btn btn-dark">Show</a>
+            {% if is_granted('ROLE_ADMIN') %}
             <a href="/users/user/edit/{{ user.id }}" class="btn btn-dark">Edit</a>
             <a href="/users/user/delete/{{user.id}}" class="btn btn-danger">Delete</a>
+            {% endif %}
             </td>
           </tr>
         {% endfor %}
