--- a/templates/users/edit.html.twig
+++ b/templates/users/edit.html.twig
@@ -6,7 +6,7 @@
 
 {{ form_widget(form) }}
 <label>Password</label>
-<input class="form-control" name="password">
+<input type="password" class="form-control" name="password">
 <label>Available Group List</label>
 <select class="form-control" name="groups[group][]">
   <option disabled selected >Select from the list...</option>
