--- a/templates/users/index.html.twig
+++ b/templates/users/index.html.twig
@@ -14,11 +14,11 @@
         {% for user in users %}
           <tr>
             <td>{{ user.name }}</td>
-            <td> 
-            <a href="/users/user/{{ user.id }}" class="btn btn-dark">Show</a>
+            <td>
+            <a style="margin-top: 5px;" href="/users/user/{{ user.id }}" class="btn btn-dark">Show</a>
             {% if is_granted('ROLE_ADMIN') %}
-            <a href="/users/user/edit/{{ user.id }}" class="btn btn-dark">Edit</a>
-            <a href="/users/user/delete/{{user.id}}" class="btn btn-danger">Delete</a>
+            <a style="margin-top: 5px;" href="/users/user/edit/{{ user.id }}" class="btn btn-dark">Edit</a>
+            <a style="margin-top: 5px;" href="/users/user/delete/{{user.id}}" class="btn btn-danger">Delete</a>
             {% endif %}
             </td>
           </tr>
