--- a/templates/inc/navbar.html.twig
+++ b/templates/inc/navbar.html.twig
@@ -1,42 +1,35 @@
-<nav class="navbar navbar-expand-sm navbar-dark bg-secondary mb-3" style="background-color: #6c757d;">
-<div class="container">
-  <a href="/" class="navbar-brand">User Management System</a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#mobile-nav">
-    <span class="navbar-toggle-icon"></span>
-  </button>
-
-  <div class="collapse navbar-collapse" id="mobile-nav">
-    <ul class="navbar-nav ml-auto">
-      <li class="nav-item ms-1">
-      <div class="dropdown">
-          <a class="btn btn-secondary dropdown-toggle border-0" 
-          href="#" role="button"  data-bs-toggle="dropdown" aria-expanded="false">
-          Users</a>
-          <ul class="dropdown-menu" aria-labelledby="dropdownMenuLink">
-          {% if is_granted('ROLE_ADMIN') %}
-            <li><a class="dropdown-item" href="/users/user/new" class="nav-link">New User</a></li>
-          {% endif %}
-            <li><a class="dropdown-item" href="/users/" class="nav-link">User List</a></li>
+<nav class="navbar navbar-expand-sm navbar-light bg-light">
+  <div class="container-fluid">
+    <a class="navbar-brand" href="#">"UMS"</a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+            Users
+          </a>
+          <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+            <li><a class="dropdown-item" href="/users/user/new">New User</a></li>
+            <li><a class="dropdown-item" href="/users/">User List</a></li>
           </ul>
-      </div>
-      </li>
-      <li class="nav-item ms-1">
-      <div class="dropdown">
-          <a class="btn btn-secondary dropdown-toggle border-0" 
-          href="#" role="button"  data-bs-toggle="dropdown" aria-expanded="false">
-          Groups</a>
-          <ul class="dropdown-menu" aria-labelledby="dropdownMenuLink">
-          {% if is_granted('ROLE_ADMIN') %}
-            <li><a class="dropdown-item" href="/groups/group/new" class="nav-link">New Group</a></li>
-          {% endif %}
-            <li><a class="dropdown-item" href="/groups/" class="nav-link">Group List</a></li>
+        </li>
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+            Groups
+          </a>
+          <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+            <li><a class="dropdown-item" href="/groups/group/new">New Group</a></li>
+            <li><a class="dropdown-item" href="/groups/">Group List</a></li>
           </ul>
-      </div>
-      </li>
-    </ul>
-  </div>
-  <div class="nav navbar-nav navbar-right">
+        </li>
+      </ul>
+      
+      <div class="nav navbar-nav navbar-right">
                <a href="{{ path('logout') }}" class="navbar-brand"><strong>Logout</strong></a>
             </div>
-</div>
+      </div>
+    </div>
+  </div>
 </nav>
