--- a/templates/main.html.twig
+++ b/templates/main.html.twig
@@ -1,5 +1,6 @@
 {% extends 'base.html.twig' %}
 {% block title %} Welcome {% endblock %}
 {% block body %} 
-<h1>Welcome</h1>
+<div class="position-absolute top-50 start-50 translate-middle"><h1>WELCOME</h1></div>
+
 {% endblock %}
