--- a/templates/groups/create.html.twig
+++ b/templates/groups/create.html.twig
@@ -1,11 +1,11 @@
 {% extends 'base.html.twig' %}
 {% block title %}Create new Group{% endblock %}
 {% block body %} 
+<div style="max-width:600px">
 {{ form_start(form) }}
 
 {{ form_widget(form) }}
 <div style="margin:5px 0">
-<label style="margin-top:5px">User List</label>
 {# <select class="form-control" name="users[user][]" multiple>
   <option disabled selected>Select user</option>
   {% for user in users %}
@@ -15,4 +15,5 @@
    </div>
    <button type="submit" class="btn btn-secondary">Create</button>
 {{ form_end(form) }}
+</div>
 {% endblock %}
