--- a/templates/inc/navbar.html.twig
+++ b/templates/inc/navbar.html.twig
@@ -11,7 +11,9 @@
             Users
           </a>
           <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+          {% if is_granted('ROLE_ADMIN') %}
             <li><a class="dropdown-item" href="/users/user/new">New User</a></li>
+          {% endif %}
             <li><a class="dropdown-item" href="/users/">User List</a></li>
           </ul>
         </li>
@@ -20,7 +22,9 @@
             Groups
           </a>
           <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+          {% if is_granted('ROLE_ADMIN') %}
             <li><a class="dropdown-item" href="/groups/group/new">New Group</a></li>
+          {% endif %}
             <li><a class="dropdown-item" href="/groups/">Group List</a></li>
           </ul>
         </li>
