--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -17,9 +17,9 @@
 
     <h1 class="h3 mb-3 font-weight-normal">Please sign in</h1>
     <label for="inputName">Name</label>
-    <input type="text" value="{{ last_username }}" name="_username" id="inputName" class="form-control" required autofocus>
+    <input style="max-width:400px" type="text" value="{{ last_username }}" name="_username" id="inputName" class="form-control" required autofocus>
     <label for="inputPassword">Password</label>
-    <input type="password" name="_password" id="inputPassword" class="form-control" required>
+    <input style="max-width:400px" type="password" name="_password" id="inputPassword" class="form-control" required>
 
     <input type="hidden" name="_csrf_token"
            value="{{ csrf_token('authenticate') }}"
@@ -36,7 +36,7 @@
         </div>
     #}
 
-    <button class="btn btn-small btn-primary" type="submit">
+    <button style="margin-top:10px" class="btn btn-small btn-secondary" type="submit">
         Sign in
     </button>
 </form>
