--- a/templates/users/edit.html.twig
+++ b/templates/users/edit.html.twig
@@ -1,6 +1,7 @@
 {% extends 'base.html.twig' %}
 {% block title %}Edit User information{% endblock %}
 {% block body %}
+<div style="max-width:600px">
 <h3>Edit User information</h3>
 {{ form_start(form) }}
 
@@ -38,4 +39,5 @@
     <button type="submit" class="btn btn-secondary">Edit</button>
     </div>
 {{ form_end(form) }}
+</div>
 {% endblock %}
