--- a/templates/users/show.html.twig
+++ b/templates/users/show.html.twig
@@ -30,5 +30,5 @@
 {% else %}
 <p>Something went wrong</p>
 {% endif %}
-<a href="/users/" class="btn btn-primary">Back</a>
+<a href="/users/" class="btn btn-secondary">Back</a>
 {% endblock %}
